<resources>
    <string name="app_name">Travel India</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="button">Button1</string>
    <string name="googleSignIn">Google Sign-In</string>
    <string name="signIn">Sign In</string>
    <string name="signedOut">Signed Out</string>
    <string name="image">Image</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="notificationChannel">My Notification</string>
    <string name="contactUs">Contact Us\n</string>
    <string name="rootFragmentTag">Root Fragment Tag</string>
    <string name="profileFragmentTag">Profile Fragment Tag</string>
    <string name="signUpFragmentTag">Sign Up Fragment Tag</string>
</resources>