<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/nav_view"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnFragHome"
                android:contentDescription="@string/home"
                android:src="@drawable/home_button"
                android:background="#ffffff"
                android:layout_weight="1"></ImageButton>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnFragContactUs"
                android:contentDescription="@string/contactUs"
                android:src="@drawable/circle_button"
                android:background="#ffffff"
                android:layout_weight="1"></ImageButton>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnFragProfile"
                android:contentDescription="@string/profile"
                android:src="@drawable/profile_button"
                android:background="#ffffff"
                android:layout_weight="1"></ImageButton>

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/nav_view"
        android:layout_marginBottom="50dp"
        android:id="@+id/container"
        >
    </FrameLayout>
</RelativeLayout>