<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment"
    android:background="#817F7F">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="center">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/google"
                android:layout_marginBottom="10dp"
                ></ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:id="@+id/googleSignIn"
                android:text="@string/googleSignIn"
                android:textStyle="bold"
                android:textSize="30sp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/signedOut"
                android:textStyle="bold"
                android:textSize="16sp"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:onClick="signIn">
                <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/google"
                android:layout_margin="8dp"
                ></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn"
                    android:layout_margin="8dp"
                    android:textSize="20sp">

                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>